{
    "name": "Controls",
    "maps": [
        {
            "name": "Gameplay",
            "id": "159fb91d-d821-4576-b1ef-d62475549daf",
            "actions": [
                {
                    "name": "ChannelUp",
                    "type": "Button",
                    "id": "d76e8e05-9a3d-44bf-a2ad-ebbab959e790",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ChannelDown",
                    "type": "Button",
                    "id": "a0e196d8-efaf-4610-9324-8704bebd0365",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "VolumeUp",
                    "type": "Button",
                    "id": "2bfed443-73a1-4460-8259-ae1da3fe659d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "VolumeDown",
                    "type": "Button",
                    "id": "a31ab7c0-b613-46c5-86d8-b914daaebfbf",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Mute",
                    "type": "Button",
                    "id": "7b55919f-d61d-4ea7-8bc1-3ab40ed3ac75",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "9e28f94d-0e18-40b5-ac55-0059abedeb36",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ChannelUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dcc16e60-88ac-4320-8c59-f9f8eec85269",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ChannelDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "513d38f7-5e9c-4142-b850-c3f8d8d1f02a",
                    "path": "<Keyboard>/equals",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "VolumeUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d0c5ea88-bec2-4409-a333-14bd3885b14b",
                    "path": "<Keyboard>/minus",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "VolumeDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "368b7bbe-f5de-4039-a24d-de7d57a0f099",
                    "path": "<Keyboard>/backquote",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Mute",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}